- added automatic capitalize on chart legends with capitalize option in legendstyle - fixed non-latin letters did not resolve if embedded data was too big

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -32,6 +32,9 @@
     }
     .recharts-legend-item-text {
       display: inline-block;
+      &.capitalize {
+        text-transform: capitalize;
+      }
     }
     .recharts-legend-item-value {
       float: right;
